# TritonTorch

./: LICENSE  README.md  pyproject.toml  setup.py
TritonHub/: __init__.py  utils.py
TritonHub/Activations/: gelu.py  leaky_relu.py  logsoftmax.py  mish.py  relu.py  relu6.py  sigmoid.py  silu.py  softmax.py  softmin.py  softplus.py  tanh.py  threshold.py
TritonHub/Distance/: pairwise_cosine_similarity.py
TritonHub/Layers/: __init__.py  conv1d.py  conv2d.py  dropout.py  linear.py  mha.py
TritonHub/Normalization/: layernorm.py  rmsnorm.py
TritonHub/Ops/: batched_matmul.py  norm.py  normalize.py
TritonTorch/: __init__.py  autotune.py  utils.py
TritonTorch/Activations/: __init__.py  gelu.py  leaky_relu.py  logsoftmax.py  mish.py  relu.py  relu6.py  sigmoid.py  silu.py  softmax.py  softmin.py  softplus.py  tanh.py  threshold.py
TritonTorch/Distance/: __init__.py  pairwise_cosine_similarity.py
TritonTorch/Layers/: __init__.py  conv1d.py  conv2d.py  dropout.py  linear.py  mha.py  mlp.py
TritonTorch/Normalization/: layernorm.py  rmsnorm.py
TritonTorch/Ops/: __init__.py  batched_matmul.py  norm.py  normalize.py
UnitTests/Activations/: gelu_unittest.py  logsoftmax_unittest.py
UnitTests/Distance/: cosine_similarity_unittest.py
UnitTests/Layers/: conv1d_unittest.py  linear_unittest.py
UnitTests/Normalization/: layernorm_unittest.py  rmsnorm_unittest.py
UnitTests/Ops/: batched_matmul_unittest.py
tests/: README.md  base.py  conftest.py  utils.py
tests/activations/: test_gelu.py  test_leaky_relu.py  test_logsoftmax.py  test_mish.py  test_relu.py  test_relu6.py  test_sigmoid.py  test_silu.py  test_softmax.py  test_softmin.py  test_softplus.py  test_tanh.py  test_threshold.py
tests/distance/: test_cosine_similarity.py
(+11 files in other folders)
