[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TritonTorch"
version = "3.0.0"
authors = [
    {name = "Ali Youssef"}
]
description = "A collection of Triton-based neural network modules"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["triton", "pytorch", "cuda", "triton-language", "triton-kernels", "machine-learning", "deep-learning"]
dependencies = [
    "torch",
    "triton",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/ayoussf/TritonTorch"
Repository = "https://github.com/ayoussf/TritonTorch"
Issues = "https://github.com/ayoussf/TritonTorch/issues"
PullRequests = "https://github.com/ayoussf/TritonTorch/pulls"

[tool.setuptools.packages.find]
exclude = ["build", "dist", "TritonTorch.egg-info", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]